# zkSSI

./: .gitignore  Cargo.toml  README.md  exp.sh  hardhat.config.ts  package.json
circuits/vcp_generation/: Cargo.toml  Nargo.toml  Prover.toml  Verifier.toml  run.sh
circuits/vcp_generation/proofs/: myproof.proof  myvk.vk  vcp_generation.proof
circuits/vcp_generation/src/: main.nr  main.rs
contracts/: util.sol  (+5 more)
reports/: offchain-32-1-0.json  offchain-32-1-1.json  offchain-32-2-0.json  offchain-32-2-1.json  offchain-32-3-0.json  offchain-32-4-0.json  offchain-32-5-0.json  offchain-prove.csv  offchain-verify.csv  offchain.csv  onchain-verify.csv  pyproject.toml  visualize.py
reports/data/: offchain-16-1-0-noir_rs.json  offchain-16-1-1-noir_rs.json  offchain-16-10-0-noir_rs.json  offchain-16-2-0-noir_rs.json  offchain-16-4-1-noir_rs.json  offchain-16-6-0-noir_rs.json  offchain-16-7-1-noir_rs.json  offchain-16-8-1-noir_rs.json  offchain-24-1-1-noir_rs.json  offchain-24-10-1-noir_rs.json  offchain-24-2-1-noir_rs.json  offchain-24-4-1-noir_rs.json  offchain-24-5-1-noir_rs.json  offchain-24-6-1-noir_rs.json  offchain-24-8-1-noir_rs.json  offchain-32-1-0-noir_rs.json  offchain-32-10-0-noir_rs.json  offchain-32-10-1-noir_rs.json  offchain-32-2-0-noir_rs.json  offchain-32-3-0-noir_rs.json  offchain-32-5-0-noir_rs.json  offchain-32-5-1-noir_rs.json  offchain-32-6-0-noir_rs.json  offchain-32-6-1-noir_rs.json  offchain-32-8-1-noir_rs.json  offchain-32-9-1-noir_rs.json
reports/data/offchain/: offchain-16-1-0-nargo.json  offchain-16-1-1-nargo.json  offchain-16-10-0-nargo.json  (+97 more)
(+191 files in other folders)
