[tool.poetry]
name = "zkvc_reports"
version = "0.1.0"
description = ""
authors = ["Tu Hoang"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
